# devops-calcolatrice

./: .dockerignore  .gitignore  Dockerfile  README.md  calcolatrice.py  operazioni.py  pyproject.toml  test_divisione.py  test_somma.py
.github/workflows/: docker-build.yml  pytest.yml
test/: test_moltiplicazione.py  test_sottrazione.py
